[package]
name = "ptx-support-macros"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
nom = "4.0"
quote = "0.6"
failure = "0.1"

[dependencies.syn]
version = "0.15"
features = ["full", "extra-traits"]

[dependencies.proc-macro2]
version = "0.4"
features = ["nightly"]
