[package]
name = "cuda-panic-with-macros"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[build-dependencies]
ptx-builder = "0.5"

[target.'cfg(not(target_os = "cuda"))'.dependencies]
cuda = { git = "https://github.com/japaric/cuda" }

[target.'cfg(target_os = "cuda")'.dependencies]
ptx-support = { path = "../../ptx-support", default-features = true }

