[package]
name = "cuda-panic"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[build-dependencies]
ptx-builder = { git = "https://github.com/denzp/rust-ptx-builder" }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
cuda = { git = "https://github.com/japaric/cuda" }

[target.'cfg(target_os = "cuda")'.dependencies]
ptx-support = { path = "../../ptx-support" }
